workloads/immich/kustomize/overlays/dev/gateway-patch.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: immich-https

spec:
  hostnames:
    - immich.dev.sidewinder.lan

  rules:
    - backendRefs:
        - name: immich-dev-server # SVC name (internal IP:PORT).
          port: 2283

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: immich-http

spec:
  hostnames:
    - immich.dev.sidewinder.lan

  rules:
    - backendRefs:
        - name: immich-dev-server # SVC name (internal IP:PORT).
          port: 2283
